@@ -6160,16 +6160,14 @@ is used, and with
 is used.  The defaults can be restored with
 .IR TopTitleNotRotated " and " BottomTitleNotRotated .
 
-.\"needs_lang_check
 By default the title bar decoration defined using the
 .B TitleStyle
 command is rotated following the title text rotation (see the
-previous paragraph). This can be disable by using the
+previous paragraph). This can be disabled by using the
 .I !UseTitleDecorRotation
 style.
 .I UseTitleDecorRotation
 reverts back to the default.
-.\"end
 
 With the
 .I StippledTitle
@@ -6194,14 +6192,12 @@ colors set by
 .IR Color .
 Instead, the corresponding colors from the given colorset are
 used.  Note that all other features of a colorset are not used.
-.\"needs_lang_check
-You should use the
+Use the
 .I Colorset
 decoration style in the
 .BR TitleStyle " and " ButtonStyle
 command for that.
-.\"end
-To stop using the colorset, the colorset number can be omitted.
+To stop using the colorset, the colorset number is omitted.
 
 The
 .IR HilightFore ", " HilightBack " and " HilightColorset
@@ -6215,8 +6211,8 @@ replace the old commands
 takes the colorset number as its sole argument and overrides the
 colors set by
 .IR Color " or " Colorset .
-for the window border.  To stop using a colorset, the argument can
-be omitted.
+for the window border.  To stop using a colorset, the argument is
+omitted.
 
 The
 .IR HilightBorderColorset
@@ -6224,24 +6220,23 @@ style option works similarly to
 .IR BorderColorset
 but is used when the window has the focus.
 
-.\"needs_lang_check
 .IR IconTitleColorset
 takes the colorset number as its sole argument and overrides the
 colors set by
 .IR Color " or " Colorset .
-To stop using this colorset, the argument can be omitted.
+To stop using this colorset, the argument is omitted.
 
 .IR HilightIconTitleColorset
 takes the colorset number as its sole argument and overrides the
 colors set by
 .IR HilightColor " or " HilightColorset .
-To stop using this colorset, the argument can be omitted.
+To stop using this colorset, the argument is omitted.
 
 .IR IconBackgroundColorset
-takes the colorset number as its sole argument and use it to set
+takes the colorset number as its sole argument and uses it to set
 a background for the icon picture. By default the icon picture is not
-drawn onto a background image. To restore the default, the argument can
-be omitted.
+drawn onto a background image. To restore the default, the argument is
+omitted.
 
 .IR IconTitleRelief
 takes one numeric argument that may be between -50 and +50 pixels and
@@ -6261,7 +6256,6 @@ takes one numeric argument that may be between 0 and 50 pixels and
 defines the amount of free space between the relief of the icon background
 picture (if any) and the icon picture. The default is 2 and it is restored if
 the argument is omitted.
-.\"end
 
 The
 .IR Font " and " IconFont
@@ -7953,15 +7947,13 @@ styles).  Thus, if stacking styles with
 .BR AddButtonStyle " (or " AddTitleStyle
 for title-bars), use care in sequencing styles to minimize redraw.
 
-.\"needs_lang_check
 The available styles are:
 
 .IR Simple ", " Default ", " Solid ", " Colorset ", " Vector ,
 .IR ?Gradient ", " Pixmap ", " AdjustedPixmap ,
 .IR ShrunkPixmap ", " StretchedPixmap ", " TiledPixmap ", " MiniIcon
 
-The description of these styles and their arguments now follow.
-.\"end
+The description of these styles and their arguments follow:
 
 The
 .I Simple
@@ -7973,7 +7965,7 @@ The
 style conditionally accepts one argument: a number which specifies
 the default button number to load.  If the style command given is
 .BR ButtonStyle " or " AddButtonStyle ,
-the argument is optional (if given, overrides the current button).
+the argument is optional (if given, it overrides the current button).
 If a command other than
 .BR ButtonStyle " or " AddButtonStyle
 is used, the number must be specified.
@@ -7981,10 +7973,9 @@ is used, the number must be specified.
 The
 .I Solid
 style fills the button with a solid color.  The relief border
-color is not affected.  The color should be specified as a single
+color is not affected.  The color is specified as a single
 argument.  This style is fully destructive.
 
-.\"needs_lang_check
 The
 .IR Colorset " " cs " [" alpha "]"
 style fills the button with the Colorset
@@ -7998,7 +7989,6 @@ if it is 100 the colorset background is fully applied. The default is 100.
 So, the destructivity depends on the
 .I alpha
 argument.
-.\"end
 
 The
 .I "Vector num"
@@ -8079,7 +8069,6 @@ These can be used to justify the pixmap (default is centered for
 both directions).  Pixmap transparency is used for the color
 "None."  This style is partially destructive.
 
-.\"needs_lang_check
 The
 .I AdjustedPixmap
 style is similar to the
@@ -8090,16 +8079,15 @@ The
 .I ShrunkPixmap
 style is similar to the
 .I Pixmap
-style. But if the image is bigger than the button, then the image is resized
+style. But if the image is bigger than the button the image is resized
 to fit into the button.
 
 The
 .I StretchedPixmap
 style is similar to the
 .I Pixmap
-style. But if the image is smaller than the button, then the image is resized
+style. But if the image is smaller than the button the image is resized
 to cover the button.
-.\"end
 
 The
 .I TiledPixmap
@@ -8326,11 +8314,10 @@ TitleStyle -- flat
 ButtonStyle All Active (-- flat) Inactive (-- flat)
 .EE
 
-.\"needs_lang_check
 .B TitleStyle
 accepts all the
 .B ButtonStyle
-.IR style ":"
+ styles and arguments:
 
 .IR Simple ", " Default ", " Solid ", " Colorset ", " Vector ,
 .IR ?Gradient ", " Pixmap ", " AdjustedPixmap ,
@@ -8344,8 +8331,8 @@ In addition to these styles
 .B TitleStyle
 accepts a powerful
 .B MultiPixmap
-option. This allows you to specify different pixmaps, Colorset or
-colours for different parts of the titlebar. Some of them are tiled or
+option. This allows you to specify different pixmaps, colorsets or
+colors for different parts of the titlebar. Some of them are tiled or
 stretched to fit a particular space; others are discrete "transition"
 images. The definable
 .I sections
@@ -8421,10 +8408,8 @@ is assumed and adding "(stretched)" between the section and the
 file name implies
 .IR AdjustedPixmap .
 
-\."end
-
 .TP
-.BI "UpdateDecor [" decor "]"
+.BI "UpdateDecor " [ "decor" ]
 This command is deprecated and will be removed in the future.  There
 are plans to replace it with a more flexible solution in fvwm-3.0.
 
