@@ -1,3 +1,7 @@
+2003-01-06  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/fvwm.1.in: Lang check.
+
 2003-01-03  olicha  <olivier.chapuis@free.fr>
 
 	* fvwm/commands.h:
